<resources>
    <string name="app_name">GamesPurchase</string>
    <string name="addDBCompleted">Aggiungere Gioco Completato</string>
    <string name="addDBNoCompleted">Aggiungere Gioco Non Completato</string>
    <string name="removeOnly">Cancellare Gioco</string>
    <string name="notEmpty">Non può essere vuoto</string>
    <string name="notNotSelected">Seleziona un item</string>
    <string name="consoleDefault">Console</string>
    <string name="priorityDefault">Priority</string>
    <string name="labelDefault">Label</string>
    <string name="sagaGame">Saga Gioco</string>
    <string name="nameGame">Nome Gioco</string>
    <string name="finish">Finito?</string>
    <string name="buy">Acquistato?</string>
    <string name="add">Aggiungi</string>
    <string name="remove">Rimuovi</string>
    <string name="nullifyAction">Annulla</string>
    <string name="addText">Aggiungi</string>
    <string name="tbs">TBS</string>
    <string-array name="Buyed">
        <item>Acquistati</item>
        <item>Non Acquistati</item>
    </string-array>
    <string-array name="Finished">
        <item>Completati</item>
        <item>Non Completati</item>
    </string-array>
    <string-array name="Priority">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>
    <string-array name="Console">
        <item>Digital</item>
        <item>PC</item>
        <item>PS5</item>
        <item>PS4</item>
        <item>PS3</item>
        <item>PS2</item>
        <item>Switch</item>
        <item>3DS</item>
        <item>NDS</item>
        <item>WII</item>
        <item>GBA</item>
        <item>GBC</item>
        <item>PSP</item>
        <item>WIIU</item>
        <item>PS1</item>
        <item>PSVita</item>
        <item>GB</item>
        <item>GameCube</item>
        <item>Xbox360</item>
        <item>XboxOne</item>
        <item>XboxSeriesX</item>
    </string-array>
    <string-array name="Label">
        <item>Try AAA</item>
        <item>Try AA</item>
        <item>AAA</item>
        <item>AA</item>
        <item>A</item>
        <item>DLC</item>
        <item>Old</item>
        <item>PlayStation 5</item>
        <item>PlayStation 4</item>
        <item>PlayStation 3</item>
        <item>PlayStation 2</item>
        <item>PlayStation</item>
        <item>PlayStation Portable</item>
        <item>PlayStation Vita</item>
        <item>Nintendo Switch</item>
        <item>Nintendo Wii</item>
        <item>Nintendo Wii U</item>
        <item>Nintendo 3DS</item>
        <item>Nintendo NDS</item>
        <item>Game Boy Advance</item>
        <item>Game Boy Color</item>
        <item>Game Boy</item>
        <item>Xbox 360</item>
        <item>Xbox One</item>
        <item>Xbox Series X</item>
        <item>Still</item>
        <item>Graphic Adventure</item>
    </string-array>
</resources>