<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:background="@drawable/custom_shape_popup">

    <AutoCompleteTextView
        android:id="@+id/name_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:completionThreshold="3"
        android:hint="Nome Gioco"
        android:padding="0dp"
        android:paddingStart="15dp" />

    <AutoCompleteTextView
        android:id="@+id/saga_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:completionThreshold="3"
        android:hint="@string/sagaGame"
        android:padding="0dp"
        android:paddingStart="15dp" />

    <Spinner
        android:id="@+id/console_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saga_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contextClickable="true"
        android:entries="@array/Console"
        android:prompt="@string/consoleDefault"
        android:spinnerMode="dialog"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/finished_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/console_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingEnd="10dp"
        android:buttonTint="#000000"
        android:text="@string/finish" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/finished_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_shape_aggiungi_button" />

    <TextView
        android:id="@+id/add_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_button"
        android:layout_alignTop="@+id/add_button"
        android:layout_alignEnd="@+id/add_button"
        android:layout_alignBottom="@+id/add_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textStyle="bold" />

</RelativeLayout>
