<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/custom_shape_popup">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/name_text"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/ic_menu_delete" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/copy_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/delete_button"
        android:background="@drawable/icon_copy" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/paste_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/copy_button"
        android:background="@drawable/icon_paste"
        android:visibility="invisible" />

    <AutoCompleteTextView
        android:id="@+id/name_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/copy_button"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:completionThreshold="3"
        android:hint="Nome Gioco"
        android:padding="0dp"
        android:paddingStart="15dp" />

    <AutoCompleteTextView
        android:id="@+id/saga_text"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:completionThreshold="3"
        android:hint="@string/sagaGame"
        android:padding="0dp"
        android:paddingStart="15dp" />

    <RelativeLayout
        android:id="@+id/progress_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saga_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="Data Inizio: "
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/data_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/data_text"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/data_text"
            android:background="@color/transparent"
            android:hint="01 Gennaio 2023"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/hour_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_text"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="Ore Necessarie: "
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hour_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/data_text"
            android:layout_marginBottom="10dp"
            android:layout_alignBaseline="@+id/hour_text"
            android:layout_toEndOf="@id/hour_text"
            android:background="@color/transparent"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/hour_text"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="Progresso / Totale: "
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/actual_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hour_text"
            android:layout_alignBaseline="@+id/slash_text"
            android:layout_toEndOf="@id/progress_text"
            android:background="@color/transparent"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/slash_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/hour_text"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/actual_edit_text"
            android:text=" / "
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/total_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hour_text"
            android:layout_alignBaseline="@+id/slash_text"
            android:layout_toEndOf="@id/slash_text"
            android:background="@color/transparent"
            android:hint="0"
            android:inputType="number" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/spinners_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_relative_layout"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/console_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contextClickable="true"
            android:entries="@array/Console"
            android:prompt="@string/consoleDefault"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/console_spinner"
            android:entries="@array/Priority"
            android:prompt="@string/priorityDefault"
            android:spinnerMode="dialog"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/checkbox_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinners_relative_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/buyed_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:buttonTint="#000000"
            android:text="Acquistato?" />

        <CheckBox
            android:id="@+id/transit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/buyed_checkbox"
            android:buttonTint="#000000"
            android:text="In Transito? " />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_relative_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/update_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/custom_shape_aggiungi_button" />

        <TextView
            android:id="@+id/update_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/update_button"
            android:layout_alignTop="@+id/update_button"
            android:layout_alignEnd="@+id/update_button"
            android:layout_alignBottom="@+id/update_button"
            android:gravity="center"
            android:text="Aggiorna"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/update_button"
            android:background="@drawable/custom_shape_aggiungi_button" />

        <TextView
            android:id="@+id/reset_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/reset_button"
            android:layout_alignTop="@+id/reset_button"
            android:layout_alignEnd="@+id/reset_button"
            android:layout_alignBottom="@+id/reset_button"
            android:gravity="center"
            android:text="Reset"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
